Add site content and styles

--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
         <title>Discover hidden places in the world around you</title>
         <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     </head>
-    <body> 
+    <body--> 
         <h1>Discover hidden places in the world around you</h1>
         <p><a href="">Download Excursion (Coming soon!)</a></p>
 
+        <!-- Video -->
+
+        <video autoplay muted loop>
+            <source src="./resources/excursion.mp4" type="video/mp4">
+            Video can't be played
+        </video>
+
+        <h1>Your personal travel guide</h1>
+        <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
+
+        <!-- Image Desert -->
+        <div class="image">
+            <img src="./resources/camp.jpg" alt="Tents in the desert"/>
+        </div>
+
+        <!-- Image Phone -->
+        <div class="image-phone">
+            <img src="./resources/phone.png" alt="Phone Icon"/>
+        </div>
+
+        <h1>Coming Soon for iPhone and Android</h1>
+        <p><a href="">Download Excursion (Coming soon!)</a></p>
+        <p class="copyright">© Excursion</p>
     </body>
 </html>
